prevent long site names from wrapping

--- a/assets/less/components/site-nav.less
+++ b/assets/less/components/site-nav.less
@@ -17,6 +17,7 @@
       display: block;
       font-size: @nav-font-size;
       padding: 1rem;
+      white-space: nowrap;
     }
 
     &__logo {
